# ocsge-pv

./: Dockerfile  LICENSE.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build-and-release.yaml
src/ocsge_pv/: export_declarations_to_gpf.py  geometrize_declarations.py  import_declarations.py  ocsge_pv_help.py  pair_from_sources.py
src/ocsge_pv/resources/: geometrize_config.schema.json  get_demarche_query.gql  import_declarations_config.schema.json  pair_config.model.json  pair_config.schema.json  pairing_configuration.schema.json
tests/: test_geometrize_declarations.py  test_import_declarations.py  test_pair_from_sources.py
tests/fixtures/: geometrize_config.loaded.json  geometrize_config.nok.json  geometrize_config.ok.json  import_declarations_config.loaded.json  import_declarations_config.nok.json  import_declarations_config.ok.json  pair_config.nok.json  pair_config.ok.json
