[project]

name = "ocsge-pv"
version = "0.0.0"

description = "Python tools for generation of the photovoltaic data used in OCSGE from IGN France"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE.md"}

keywords = ["aggregation", "OCSGE", "photovoltaic"]

authors = [
  {name = "Géoportail Developer", email = "tout_rdev@ign.fr" }
]

classifiers = [

  "Development Status :: 3 - Alpha",

  "Topic :: Software Development",

  "License :: Choice pending",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  "GDAL >= 3.6.2",
  "psycopg",
  "jsonschema >= 4.23.0"
]

[project.optional-dependencies]
doc = []

dev = [
  "black",
  "isort >= 5.12.0",
  "pre-commit >3,<4",
  "ruff >= 0.0.281"
]

test = [
  "pytest >= 7.1.2",
  "coverage >= 7.0.5"
]

[project.urls]
"Homepage" = "https://github.com/IGNF/ocsge-pv"
"Bug Reports" = "https://github.com/IGNF/ocsge-pv/issues"
"Changelog" = "https://github.com/IGNF/ocsge-pv/releases"
"Source" = "https://github.com/IGNF/ocsge-pv"

[project.scripts]
geometrize_declarations = "ocsge_pv.geometrize_declarations:main"
pair_from_sources = "ocsge_pv.pair_from_sources:main"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
src = ["src"]
target-version = "py312"

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.setuptools.packages.find]
where = ["src"]

